--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev:backend": "npm run dev --prefix Backend",
+    "dev:backend": "npm run dev --prefix api",
     "dev:frontend": "npm run dev --prefix Frontend",
     "start": "npm-run-all --parallel dev:*"
   },
