--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -20,7 +20,7 @@
 // }
 {
   "compilerOptions": {
-    "module": "nodenext",
+    "module": "commonjs",
     "target": "es2022",
     "lib": ["es2022"],
     "rootDir": "./src",
